--- a/apps/server/wrangler.jsonc
+++ b/apps/server/wrangler.jsonc
@@ -169,7 +169,7 @@
         "DROP_AGENT_TABLES": "false",
         "THREAD_SYNC_MAX_COUNT": "60",
         "THREAD_SYNC_LOOP": "false",
-        "DISABLE_WORKFLOWS": "false",
+        "DISABLE_WORKFLOWS": "true",
         "AUTORAG_ID": "",
         "USE_OPENAI": "true",
         "CLOUDFLARE_ACCOUNT_ID": "",
