--- a/tools/imap-proxy/docker-compose.lair404.yaml
+++ b/tools/imap-proxy/docker-compose.lair404.yaml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   imap-proxy:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: imap-proxy:latest
     container_name: imap-proxy
     restart: unless-stopped
     ports:
@@ -12,12 +10,6 @@ services:
     environment:
       PORT: 3060
       NODE_ENV: production
-    healthcheck:
-      test: ['CMD', 'wget', '--spider', '--quiet', 'http://127.0.0.1:3060/health']
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
     labels:
       - "com.lair404.service=imap-proxy"
       - "com.lair404.port=3060"
