--- a/nginx-lair404.conf
+++ b/nginx-lair404.conf
@@ -59,7 +59,25 @@ server {
     # Client body size limit (for email attachments)
     client_max_body_size 25M;
 
-    # Proxy settings
+    # Session bootstrap: if user has no better-auth session cookie, redirect to the
+    # CF Access callback which validates the CF JWT and creates a better-auth session.
+    # Only applies to root navigation (not assets, API calls, etc.).
+    location = / {
+        if ($cookie_better_auth_session_token = "") {
+            return 302 https://mail-api.lair404.xyz/cf-access/callback;
+        }
+        proxy_pass http://mail-zero;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header CF-Access-JWT-Assertion $http_cf_access_jwt_assertion;
+    }
+
+    # All other paths (assets, manifest, etc.) proxy directly
     location / {
         proxy_pass http://mail-zero;
         proxy_http_version 1.1;
